Mise à jour V.2.9  Changes to be committed: 	modified:   controllers/classroom_controller.py 	modified:   requirements.txt 	modified:   views/main_menu_views.py

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,8 @@
+click==8.1.7
+colorama==0.4.6
 dnspython==2.6.1
+markdown-it-py==3.0.0
+mdurl==0.1.2
+Pygments==2.17.2
 pymongo==4.6.1
+rich==13.7.1
