--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,16 @@
 click==8.1.7
 colorama==0.4.6
+coverage==7.6.1
 dnspython==2.6.1
+iniconfig==2.0.0
 markdown-it-py==3.0.0
 mdurl==0.1.2
+packaging==24.1
+pluggy==1.5.0
+prompt_toolkit==3.0.45
 Pygments==2.17.2
 pymongo==4.6.1
+pytest==8.3.3
+pytest-cov==5.0.0
 rich==13.7.1
+wcwidth==0.2.13
