--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ dnspython==2.6.1
 iniconfig==2.0.0
 markdown-it-py==3.0.0
 mdurl==0.1.2
+mongomock==4.2.0.post1
 packaging==24.1
 pluggy==1.5.0
 prompt_toolkit==3.0.45
@@ -13,5 +14,7 @@ pymongo==4.6.1
 pytest==8.3.3
 pytest-cov==5.0.0
 pytest-mock==3.14.0
+pytz==2024.2
 rich==13.7.1
+sentinels==1.0.0
 wcwidth==0.2.13
