Mise à jour V.20.4  Changes to be committed: 	modified:   .gitignore 	modified:   README.md 	new file:   static/img/classroom_menu.png 	new file:   static/img/main_menu.png 	new file:   static/img/student_menu.png 	modified:   tests/tests_views/test_student_main_menu_views.py

--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,8 @@ env/
 # Exclure les fichiers et dossiers générés par Pytest
 .pytest_cache/
 
-# Exclure les fichiers .coveragerc coverage et le dossier coverage_html_report
+# Exclure les fichiers .env .coveragerc coverage et le dossier coverage_html_report
+.env
 .coveragerc
 .coverage
 coverage_html_report/
