Mise à jour V.20.5  Changes to be committed: 	modified:   models/classroom_models.py 	modified:   models/student_models.py 	modified:   setup.cfg 	modified:   tests/tests_views/test_student_main_menu_views.py

--- a/setup.cfg
+++ b/setup.cfg
@@ -11,6 +11,13 @@ pythonpath = .
 [coverage:run]
 branch = True
 source =
-    controllers
     models
     views
+
+omit =
+    main.py 
+    controllers/*
+    */tests/*
+    */env/*
+    */__pycache__/*
+    *__init__.py
