Mise à jour V.41.5  Changes to be committed: 	modified:   .gitignore 	modified:   controllers/classroom_controller.py 	modified:   main.py 	modified:   requirements.txt 	modified:   setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,8 @@
 # setup.cfg
 [flake8]
-max-line-length = 99
+max-line-length = 120
 exclude = .git,__pycache__,tests/,env/
+ignore = F401
 
 [tool:pytest]
 testpaths = tests
