--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,24 @@
+certifi==2025.1.31
+charset-normalizer==3.4.1
 click==8.1.7
 colorama==0.4.6
 coverage==7.6.1
+defusedxml==0.7.1
 dnspython==2.6.1
+flake8==7.1.2
+genbadge==1.1.1
+idna==3.10
 iniconfig==2.0.0
 markdown-it-py==3.0.0
+mccabe==0.7.0
 mdurl==0.1.2
 mongomock==4.2.0.post1
 packaging==24.1
+pillow==11.1.0
 pluggy==1.5.0
 prompt_toolkit==3.0.45
+pycodestyle==2.12.1
+pyflakes==3.2.0
 Pygments==2.17.2
 pymongo==4.6.1
 pytest==8.3.3
@@ -16,6 +26,9 @@ pytest-cov==5.0.0
 pytest-mock==3.14.0
 python-dotenv==1.0.1
 pytz==2024.2
+requests==2.32.3
 rich==13.7.1
 sentinels==1.0.0
+setuptools==75.8.1
+urllib3==2.3.0
 wcwidth==0.2.13
