Mise à jour V.42.0  Changes to be committed: 	modified:   setup.cfg 	new file:   static/badges/coverage-badge.svg 	new file:   static/badges/flake8-badge.svg 	new file:   static/badges/tests-badge.svg 	modified:   views/student_menu_views.py

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,6 +3,7 @@
 max-line-length = 120
 exclude = .git,__pycache__,tests/,env/
 ignore = F401
+extend-ignore = W503, W504
 
 [tool:pytest]
 testpaths = tests
